# narvos

./: .gitignore  .ymc_extra_conf.py  CMakeLists.txt
include/: components.h  definitions.h  entity.h  game.h  log.h  mathematica.h  movementSystem.h  physicsComponent.h  physicsSystem.h  rectComponent.h  renderingSystem.h  systems.h  textureComponent.h  transformComponent.h
include/components/: component.h  meshComponent.h  transformComponent.h
include/entities/: entity.h
include/managers/: manager.h  sceneManager.h  windowManager.h
include/math/: vector.h
include/scenes/: menuScene.h  scene.h
include/systems/: meshLoadingSystem.h  renderingSystem.h  system.h
src/: entity.c  game.cpp  log.c  log.cpp  main.c  main.cpp  movementSystem.c  physicsSystem.c  renderingSystem.c  systems.c
src/components/: component.cpp
src/entities/: entity.cpp
src/managers/: manager.cpp  sceneManager.cpp  windowManager.cpp
src/math/: vector.cpp
src/scenes/: menuScene.cpp
src/systems/: meshLoadingSystem.cpp  renderingSystem.cpp
